---
sidebar: sidebar 
permalink: whats-new.html 
keywords: 'what"s new, features, new, release notes, enhancements, fixes, new features, workload factory, builders, workload factory' 
summary: Informieren Sie sich über die Neuerungen bei der Workload-Farm für Datenbanken. 
---
= Neuerungen bei der BlueXP -Workload-Farm für Entwickler
:allow-uri-read: 
:icons: font
:imagesdir: ./media/


[role="lead"]
Informieren Sie sich über die Neuerungen bei den Builders Capability der Workload Factory.



== Bis 1. Dezember 2024



=== Ursprüngliche Version des Builders-Workloads

Die BlueXP  Workload Factory for Builders vereinfacht die Nutzung und den Zugriff auf Softwareversionen, sodass keine benutzerdefinierten Tools oder Skripte erforderlich sind. Sie können Softwareversionen als in Perforce Helix Core integrierte, sofort-Clones als komfortable Arbeitsumgebung für Ihre Entwicklungsprozesse nutzen und so Zeit und Ressourcen sparen.

Die erste Version beinhaltet die Möglichkeit, Projekte und Arbeitsbereiche zu verwalten und Aktionen mit Codebox zu automatisieren. Sie können auch Builders mit Perforce Helix Core integrieren, so dass Sie verschiedene Versionen jedes Projekts verwalten und schnell zwischen ihnen wechseln können.