@@ -240,7 +240,6 @@
   <block id="113933a0a6b3eb57d22f707e6384bd49" category="paragraph">Sie müssen<block ref="5eb9de2715b74ed434f03d8a9fef9b70" category="inline-link-rx"></block> sich mit einem der anmelden<block ref="17b71e2884d56fdbadfe752689dbd4d6" category="inline-link-rx"></block>.</block>
   <block id="aada29daee1d64ed0fe907043855cb7e" category="inline-image-macro">Zwei</block>
   <block id="b36a952e38561cb86fdb6a473044fce0" category="paragraph-title"><block ref="54f425ce8d89f4ed6b8a546561af5d60" category="inline-image-macro-rx" type="image"></block> Fügen Sie Ihrem Konto AWS-Anmeldedaten und -Berechtigungen hinzu</block>
-  <block id="6b2dd6734a7cf2cd8fa1690ca19ccd80" category="paragraph">Sie können die Workload-Fabrik im Modus _Basic_ verwenden, ohne Anmeldedaten für den Zugriff auf Ihr AWS-Konto hinzuzufügen. Durch das Hinzufügen von AWS-Anmeldeinformationen zur Workload Factory im Modus _Lesen_ oder _Automatisieren_ erhält Ihr Workload Factory Account die Berechtigungen, die zum Erstellen und Verwalten von FSX for ONTAP-Dateisystemen sowie zum Bereitstellen und Verwalten von Builders-Projekten erforderlich sind.</block>
   <block id="fb391f4cf6483b8b419032dc188bd9d8" category="inline-link">Erfahren Sie, wie Sie Anmeldeinformationen und Berechtigungen hinzufügen</block>
   <block id="c01367c7ec78f01defe37cab59b14851" category="paragraph"><block ref="d162e97fcdf643050da77419fb18d12e" category="inline-link-rx"></block>.</block>
   <block id="ca8a2087e5557e317599344687a57391" category="inline-image-macro">Drittens</block>
@@ -260,9 +259,7 @@
   <block id="7860bfc83777aac923d73f1002162f9d" category="doc">Anforderungen an den Ersteller</block>
   <block id="7881e5952d93ca1a1396ec11c08fa645" category="list-text">Workload Werksanmeldung und Konto</block>
   <block id="97911b3c54a4e826b34c1f79026316c5" category="list-text">AWS Zugangsdaten und Berechtigungen</block>
-  <block id="2e9df4fc7da7ba6ad813c1450e8f82ca" category="list-text">Sie müssen AWS-Anmeldeinformationen in die Workload-Fabrik mit automatischen Berechtigungen hinzufügen, was bedeutet, dass Sie die Workload-Fabrik im _Automate_-Modus für Builders verwenden.</block>
   <block id="5145374f219e1c177ab5588a5344aa6e" category="inline-link">Erfahren Sie, wie Sie AWS-Anmeldedaten zu der Workload-Farm hinzufügen</block>
-  <block id="1b0cdac06552abc95fe86270037368b2" category="paragraph">_Basic_ Mode und _Read_ Mode Berechtigungen werden derzeit nicht unterstützt. <block ref="ced1a4827b1ea3c1da0273c3d73fdd46" category="inline-link-rx"></block></block>
   <block id="e48bc5875c01dd007b7b2a370e879cde" category="list-text">FSX für ONTAP-Dateisystem</block>
   <block id="c16810aa96ec44a060863610996db3f6" category="list-text">Sie benötigen mindestens ein FSX für ONTAP-Dateisystem:</block>
   <block id="cf935c2a5823110e8a09c3289b67514a" category="list-text">Das Dateisystem wird von Builders zum Speichern der von Ihnen erstellten Projekte und Arbeitsbereiche verwendet.</block>
@@ -350,4 +347,10 @@
   <block id="dd490b81914dd945601e442a41cb4222" category="sidebar">NetApp Community</block>
   <block id="abd0fe91ce589ecf3c7bad0543ccad16" category="sidebar">BlueXP Blogs</block>
   <block id="ad203e818e0c9d7f42f1c260b33875f3" category="sidebar">Cloud-Webinare</block>
+  <block id="514f1fc0ac0ff6e4200d3637146367f1" category="doc">Terminologie für Berechtigungen wurde aktualisiert</block>
+  <block id="a7b97ab7d88b015e92ed51ef4bee9c25" category="paragraph">Die Benutzeroberfläche und Dokumentation der Workload Factory verwenden jetzt „Read-Only“, um auf Leseberechtigungen und „Read-Write“ zu verweisen, um Berechtigungen zu automatisieren.</block>
+  <block id="5df5d0c3be037db37091a51c0b7dd2a3" category="paragraph">Sie können die Workload-Fabrik im Modus _Basic_ verwenden, ohne Anmeldedaten für den Zugriff auf Ihr AWS-Konto hinzuzufügen. Durch das Hinzufügen von AWS-Anmeldeinformationen zur Workload Factory im Modus _Read-Only_ oder _Read/Write_ erhält Ihr Workload Factory Account die erforderlichen Berechtigungen zum Erstellen und Verwalten von FSX for ONTAP-Dateisystemen sowie zum Bereitstellen und Verwalten von Builders-Projekten.</block>
+  <block id="98c15024a0a6463353585181f922a6d8" category="list-text">Sie müssen AWS-Anmeldeinformationen zur Workload Factory mit Lese-/Schreibberechtigungen hinzufügen, was bedeutet, dass Sie die Workload-Fabrik im _Read/Write_-Modus für Builders verwenden.</block>
+  <block id="19e72e9857cc00ad57d29107d2e5f1fb" category="paragraph">_Basic_ Mode und _Read-Only_ Mode Berechtigungen werden derzeit nicht unterstützt. <block ref="ced1a4827b1ea3c1da0273c3d73fdd46" category="inline-link-rx"></block></block>
+  <block id="dac96c84baa92faab0eb342df5283a1b" category="section-title">4 Mai 2025</block>
 </blocks>
