@@ -1,7 +1,7 @@
 ---
 sidebar: sidebar 
 permalink: quick-start-builders.html 
-keywords: requirements, basic mode, read mode, automate mode 
+keywords: requirements, Basic mode, Read-only mode, Read/Write mode 
 summary: Datenbanken haben drei verschiedene Modi mit unterschiedlichen Anforderungen. 
 ---
 = Schnellstart für Bauherren
@@ -19,7 +19,7 @@ Sie müssen https://docs.netapp.com/us-en/workload-setup-admin/sign-up-saas.html
 
 .image:https://raw.githubusercontent.com/NetAppDocs/common/main/media/number-2.png["Zwei"] Fügen Sie Ihrem Konto AWS-Anmeldedaten und -Berechtigungen hinzu
 [role="quick-margin-para"]
-Sie können die Workload-Fabrik im Modus _Basic_ verwenden, ohne Anmeldedaten für den Zugriff auf Ihr AWS-Konto hinzuzufügen. Durch das Hinzufügen von AWS-Anmeldeinformationen zur Workload Factory im Modus _Lesen_ oder _Automatisieren_ erhält Ihr Workload Factory Account die Berechtigungen, die zum Erstellen und Verwalten von FSX for ONTAP-Dateisystemen sowie zum Bereitstellen und Verwalten von Builders-Projekten erforderlich sind.
+Sie können die Workload-Fabrik im Modus _Basic_ verwenden, ohne Anmeldedaten für den Zugriff auf Ihr AWS-Konto hinzuzufügen. Durch das Hinzufügen von AWS-Anmeldeinformationen zur Workload Factory im Modus _Read-Only_ oder _Read/Write_ erhält Ihr Workload Factory Account die erforderlichen Berechtigungen zum Erstellen und Verwalten von FSX for ONTAP-Dateisystemen sowie zum Bereitstellen und Verwalten von Builders-Projekten.
 
 [role="quick-margin-para"]
 https://docs.netapp.com/us-en/workload-setup-admin/add-credentials.html["Erfahren Sie, wie Sie Anmeldeinformationen und Berechtigungen hinzufügen"^].
