@@ -14,10 +14,10 @@ summary: Stellen Sie sicher, dass die Workload-Farm und AWS ordnungsgemäß eing
 Stellen Sie sicher, dass die Workload-Farm und AWS ordnungsgemäß eingerichtet sind, bevor Sie mit der Verwendung der BlueXP -Workload-Factory für Builders beginnen. Dazu gehören die Zugangsdaten für die AWS-Anmeldung, ein bereitgestelltes FSX für ONTAP-Filesystem und vieles mehr.
 
 Workload Werksanmeldung und Konto:: Sie müssen https://docs.netapp.com/us-en/workload-setup-admin/sign-up-saas.html["Richten Sie ein Konto mit Workload Factory ein"^] sich mit einem der anmelden https://docs.netapp.com/us-en/workload-setup-admin/console-experiences.html["Konsolenerfahrungen"^].
-AWS Zugangsdaten und Berechtigungen:: Sie müssen AWS-Anmeldeinformationen in die Workload-Fabrik mit automatischen Berechtigungen hinzufügen, was bedeutet, dass Sie die Workload-Fabrik im _Automate_-Modus für Builders verwenden.
+AWS Zugangsdaten und Berechtigungen:: Sie müssen AWS-Anmeldeinformationen zur Workload Factory mit Lese-/Schreibberechtigungen hinzufügen, was bedeutet, dass Sie die Workload-Fabrik im _Read/Write_-Modus für Builders verwenden.
 
 
-_Basic_ Mode und _Read_ Mode Berechtigungen werden derzeit nicht unterstützt. https://docs.netapp.com/us-en/workload-setup-admin/add-credentials.html["Erfahren Sie, wie Sie AWS-Anmeldedaten zu der Workload-Farm hinzufügen"^]
+_Basic_ Mode und _Read-Only_ Mode Berechtigungen werden derzeit nicht unterstützt. https://docs.netapp.com/us-en/workload-setup-admin/add-credentials.html["Erfahren Sie, wie Sie AWS-Anmeldedaten zu der Workload-Farm hinzufügen"^]
 
 FSX für ONTAP-Dateisystem:: Sie benötigen mindestens ein FSX für ONTAP-Dateisystem:
 +
